--- a/0_salary_prediction/salary_predilection .ipynb
+++ b/0_salary_prediction/salary_predilection .ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "id": "99d7f8cb",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "id": "73dab319",
    "metadata": {},
    "outputs": [
@@ -76,12 +76,12 @@
    "id": "bd339142",
    "metadata": {},
    "source": [
-    "### handle missing valus  "
+    "### handle missing values  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "id": "13eba361",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "id": "e4d1d98a",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "max    11.000000  10.000000  10.000000  80000.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "id": "c1e5fada",
    "metadata": {},
    "outputs": [
@@ -246,14 +246,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f2441fb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "dd9937a0",
    "metadata": {},
@@ -263,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "id": "2659847d",
    "metadata": {},
    "outputs": [
@@ -274,23 +266,22 @@
       "\n",
       " Train set:\n",
       " [[ 3.  7. 10.]\n",
-      " [ 7.  9.  6.]\n",
-      " [11.  7.  8.]] [62000 70000 80000]\n",
+      " [11.  7.  8.]\n",
+      " [ 5.  6.  7.]] [62000 80000 60000]\n",
       "\n",
       "Test set: [[ 2. 10. 10.]\n",
-      " [ 5.  6.  7.]] [65000 60000]\n"
+      " [ 7.  9.  6.]] [65000 70000]\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X = df.iloc[:,0:3].values #exclude salary\n",
-    "Y = df['sal'].values\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y,random_state=80)\n",
+    "X = df.iloc[:,0:3] #exclude salary\n",
+    "Y = df['sal'] #salary\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X.values,Y.values,random_state=100)\n",
     "# print(X_train ,Y_test)\n",
     "print ('\\n Train set:\\n', X_train,  Y_train)\n",
-    "print ('\\nTest set:', X_test,  Y_test)\n",
-    "\n"
+    "print ('\\nTest set:', X_test,  Y_test)\n"
    ]
   },
   {
@@ -303,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
    "id": "10aa1389",
    "metadata": {},
    "outputs": [
@@ -311,8 +302,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2-score: -1.57\n",
-      "[58679.24528302] [81132.0754717]\n"
+      "Prediction :\n",
+      "    2 yr experience, 9 test score, 6 interview score : [52905.98290598]\n",
+      "    12 yr experience, 10 test score, 10 interview score : [90487.17948718]\n"
      ]
     }
    ],
@@ -323,11 +315,11 @@
     "reg = LinearRegression().fit(X_train,Y_train)\n",
     "y_hat = reg.predict(X_test)\n",
     "\n",
-    "# from sklearn.metrics import r2_score\n",
-    "print(\"R2-score: %.2f\" % r2_score(y_hat , Y_test) )\n",
     "# print(y_hat,Y_test)\n",
-    "print(reg.predict(np.array([[2,9,6]]))\n",
-    ",reg.predict(np.array([[12,10,10]])))\n",
+    "print(\n",
+    "    f\"\"\"Prediction :\n",
+    "    2 yr experience, 9 test score, 6 interview score : {reg.predict(np.array([[2,9,6]]))}\n",
+    "    12 yr experience, 10 test score, 10 interview score : {reg.predict(np.array([[12,10,10]]))}\"\"\")\n",
     "\n",
     "\n"
    ]
