--- a/1_costFunction/CostFonc.ipynb
+++ b/1_costFunction/CostFonc.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 153,
    "id": "529a4083",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 154,
    "id": "cc16bfba",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
        "4    jeff    80  83"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 155,
    "id": "dca20ad0",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 180,
    "id": "06bbc85d",
    "metadata": {},
    "outputs": [
@@ -179,9 +179,11 @@
     }
    ],
    "source": [
+    "intercept_assump =0.1\n",
+    "coeffi_assump= 1\n",
     "plt.figure(figsize = (8,6))\n",
     "plt.scatter(df.math.values, df.cs.values, marker='o', color='red')\n",
-    "plt.plot(X_train ,0.1+ 1*X_train, color='blue',markerfacecolor='red',\n",
+    "plt.plot(X_train ,intercept_assump+coeffi_assump*X_train, color='blue',markerfacecolor='red',\n",
     "             markersize=10,linestyle='dashed')\n",
     "plt.xlabel(\"Math\")\n",
     "plt.ylabel(\"CS\")\n",
@@ -198,52 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "68e2c4a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mean_squared_error(y_true, y_predicted):\n",
-    "     \n",
-    "    # Calculating the loss or cost\n",
-    "    cost = np.sum((y_true-y_predicted)**2) / 2/len(y_true)\n",
-    "    return cost\n",
-    "# print(mean_squared_error(y_test, y_hat))\n",
-    "# print((y_test-y_hat))\n",
-    "# print((y_test-y_hat)**2)\n",
-    "# np.sum((y_test-y_hat)**2) /(len(y_test)*2)\n",
-    "# from sklearn.metrics import r2_score\n",
-    "# print(\"R2-score: %.2f\" % r2_score(y_test , y_hat) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6bc1a64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.scatter(df.math, df.cs,  color='blue')\n",
-    "# plt.plot(X_train, reg.coef_[0]*X_train + reg.intercept_, '-r')\n",
-    "\n",
-    "# plt.xlabel(\"Math\")\n",
-    "# plt.ylabel(\"CS\")\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfa12ff8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# y_hat = reg.intercept_ + reg.coef_*teta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 215,
    "id": "d3c6577b",
    "metadata": {
     "scrolled": false
@@ -284,8 +241,7 @@
    "source": [
     "import math\n",
     "\n",
-    "def mean_squared_error(y_true, y_predicted):\n",
-    "     \n",
+    "def cost_function(y_true, y_predicted):\n",
     "    # Calculating the loss or cost\n",
     "    cost = np.sum((y_true-y_predicted)**2) / 2/len(y_true)\n",
     "    return cost\n",
@@ -312,7 +268,7 @@
     "        y_predicted = (current_weight * x) + current_bias\n",
     "         \n",
     "        # Calculationg the current cost\n",
-    "        current_cost = mean_squared_error(y, y_predicted)\n",
+    "        current_cost = cost_function(y, y_predicted)\n",
     " \n",
     "        # If the change in cost is less than or equal to\n",
     "        # stopping_threshold we stop the gradient descent\n",
@@ -344,29 +300,28 @@
     "        current_bias = current_bias - (learning_rate * bias_derivative)\n",
     "\n",
     "     \n",
-    "def main():\n",
     "     \n",
     "    # Data\n",
-    "    X = df.math.values\n",
-    "    Y = df.cs.values\n",
-    "    # Estimating weight and bias using gradient descent\n",
-    "    estimated_weight, eatimated_bias, current_cost = gradient_descent(df.math, df.cs,learning_rate = 1e-4,stopping_threshold=1e-20)\n",
-    "    print(f\"\\n\\nEstimated Intercept: {eatimated_bias}\\nEstimated coefficient: {estimated_weight}\\nCost :{current_cost}\")\n",
+    "X = df.math.values\n",
+    "Y = df.cs.values\n",
+    " # Estimating weight and bias using gradient descent\n",
+    "estimated_weight, eatimated_bias, current_cost = gradient_descent(df.math, df.cs,learning_rate = 1e-4,stopping_threshold=1e-20)\n",
+    "print(f\"\\n\\nEstimated Intercept: {eatimated_bias}\\nEstimated coefficient: {estimated_weight}\\nCost :{current_cost}\")\n",
     "\n",
     "\n",
-    "    # Making predictions using estimated parameters\n",
-    "    Y_pred = estimated_weight*X + eatimated_bias\n",
+    "# Making predictions using estimated parameters\n",
+    "Y_pred = estimated_weight*X + eatimated_bias\n",
     " \n",
-    "    # Plotting the regression line\n",
-    "    plt.figure(figsize = (8,6))\n",
-    "    plt.scatter(X, Y, marker='o', color='red')\n",
-    "    plt.plot(X, estimated_weight*X + eatimated_bias, color='blue',markerfacecolor='red',\n",
+    "# Plotting the regression line\n",
+    "plt.figure(figsize = (8,6))\n",
+    "plt.scatter(X, Y, marker='o', color='red')\n",
+    "plt.plot(X, Y_pred, color='blue',markerfacecolor='red',\n",
     "             markersize=10,linestyle='dashed')\n",
-    "    plt.xlabel(\"Math\")\n",
-    "    plt.ylabel(\"CS\")\n",
-    "    plt.show()\n",
-    "    \n",
-    "main()"
+    "plt.xlabel(\"Math\")\n",
+    "plt.ylabel(\"CS\")\n",
+    "plt.show()\n",
+    " \n",
+    "    "
    ]
   }
  ],
