--- a/2_save_and_load_model/save_and_load.ipynb
+++ b/2_save_and_load_model/save_and_load.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "529a4083",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "cc16bfba",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "4    jeff    80  83"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "dca20ad0",
    "metadata": {},
    "outputs": [
@@ -166,170 +166,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57bced48",
-   "metadata": {},
-   "source": [
-    "### Linear Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "68e2c4a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cost_function(y_true, y_predicted):\n",
-    "     \n",
-    "    # Calculating the loss or cost\n",
-    "    cost = np.sum((y_true-y_predicted)**2) / 2/len(y_true)\n",
-    "    return cost\n",
-    "# print(cost_function(y_test, y_hat))\n",
-    "# print((y_test-y_hat))\n",
-    "# print((y_test-y_hat)**2)\n",
-    "# np.sum((y_test-y_hat)**2) /(len(y_test)*2)\n",
-    "# from sklearn.metrics import r2_score\n",
-    "# print(\"R2-score: %.2f\" % r2_score(y_test , y_hat) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "f6bc1a64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.scatter(df.math, df.cs,  color='blue')\n",
-    "# plt.plot(X_train, reg.coef_[0]*X_train + reg.intercept_, '-r')\n",
-    "\n",
-    "# plt.xlabel(\"Math\")\n",
-    "# plt.ylabel(\"CS\")\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "cfa12ff8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# y_hat = reg.intercept_ + reg.coef_*teta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "d3c6577b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import math\n",
-    "\n",
-    "# def mean_squared_error(y_true, y_predicted):\n",
-    "     \n",
-    "#     # Calculating the loss or cost\n",
-    "#     cost = np.sum((y_true-y_predicted)**2) / 2/len(y_true)\n",
-    "#     return cost\n",
-    " \n",
-    "# # Gradient Descent Function\n",
-    "# # Here iterations, learning_rate, stopping_threshold\n",
-    "# # are hyperparameters that can be tuned\n",
-    "# def gradient_descent(x, y, iterations = 1000, learning_rate = 0.001,stopping_threshold = 1e-5):\n",
-    "     \n",
-    "#     # Initializing weight, bias, learning rate and iterations\n",
-    "#     current_weight = 0.1\n",
-    "#     current_bias = 0.01\n",
-    "#     iterations = iterations\n",
-    "#     learning_rate = learning_rate\n",
-    "#     n = float(len(x))\n",
-    "     \n",
-    "#     costs = []\n",
-    "#     weights = []\n",
-    "#     previous_cost = None\n",
-    "#     i=0\n",
-    "#     # Estimation of optimal parameters\n",
-    "#     while True:\n",
-    "#         i+=1\n",
-    "#         # Making predictions\n",
-    "#         y_predicted = (current_weight * x) + current_bias\n",
-    "         \n",
-    "#         # Calculationg the current cost\n",
-    "#         current_cost = mean_squared_error(y, y_predicted)\n",
-    " \n",
-    "#         # If the change in cost is less than or equal to\n",
-    "#         # stopping_threshold we stop the gradient descent\n",
-    "#         #if previous_cost and abs(previous_cost-current_cost)<=stopping_threshold:\n",
-    " \n",
-    "#         if previous_cost and math.isclose(current_cost, previous_cost, rel_tol=stopping_threshold):\n",
-    "#             print(f\"\\n\\nEstimated Intercept: {current_bias}\\nEstimated coefficient: {current_weight}\")\n",
-    "#             return current_weight,current_bias\n",
-    "            \n",
-    "#         previous_cost = current_cost\n",
-    " \n",
-    "#         costs.append(current_cost)\n",
-    "#         weights.append(current_weight)\n",
-    "         \n",
-    "#         # Calculating the gradients\n",
-    "#         weight_derivative = -(2/n) * sum(x * (y-y_predicted))\n",
-    "#         bias_derivative = -(2/n) * sum(y-y_predicted)\n",
-    "         \n",
-    "#         # Updating weights and bias\n",
-    "#         current_weight = current_weight - (learning_rate * weight_derivative)\n",
-    "#         current_bias = current_bias - (learning_rate * bias_derivative)\n",
-    "\n",
-    "     \n",
-    "#     # Visualizing the weights and cost at for all iterations\n",
-    "#     plt.figure(figsize = (8,6))\n",
-    "#     plt.plot(weights, costs)\n",
-    "#     plt.scatter(weights, costs, marker='o', color='red')\n",
-    "#     plt.title(\"Cost vs Coefficient\")\n",
-    "#     plt.ylabel(\"Cost\")\n",
-    "#     plt.xlabel(\"Coefficient\")\n",
-    "#     plt.show()\n",
-    "     \n",
-    " \n",
-    "# def main():\n",
-    "     \n",
-    "#     # Data\n",
-    "#     X = df.math.values\n",
-    "#     Y = df.cs.values\n",
-    "#     # Estimating weight and bias using gradient descent\n",
-    "#     estimated_weight, eatimated_bias = gradient_descent(df.math, df.cs, iterations=200000,learning_rate = 1e-4,stopping_threshold=1e-6)\n",
-    " \n",
-    "#     # Making predictions using estimated parameters\n",
-    "#     Y_pred = estimated_weight*X + eatimated_bias\n",
-    " \n",
-    "#     # Plotting the regression line\n",
-    "#     plt.figure(figsize = (8,6))\n",
-    "#     plt.scatter(X, Y, marker='o', color='red')\n",
-    "#     plt.plot([min(X), max(X)], [min(Y_pred), max(Y_pred)], color='blue',markerfacecolor='red',\n",
-    "#              markersize=10,linestyle='dashed')\n",
-    "#     plt.xlabel(\"Math\")\n",
-    "#     plt.ylabel(\"CS\")\n",
-    "#     plt.show()\n",
-    "    \n",
-    "# main()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b455489f",
    "metadata": {},
    "source": [
-    "### Implemenet with class"
+    "### Implement with class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "63522253",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Model:\n",
     "\n",
-    "    def mean_squared_error(y_true, y_predicted):\n",
+    "    def cost_function(y_true, y_predicted):\n",
     "        # Calculating the loss or cost\n",
     "        cost = np.sum((y_true-y_predicted)**2) / 2/len(y_true)\n",
     "        return cost\n",
@@ -352,7 +204,7 @@
     "            y_predicted = (current_weight * x) + current_bias\n",
     "\n",
     "            # Calculationg the current cost\n",
-    "            current_cost = mean_squared_error(y, y_predicted)\n",
+    "            current_cost = Model.cost_function(y, y_predicted)\n",
     "\n",
     "            # If the change in cost is less than or equal to\n",
     "            # stopping_threshold we stop the gradient descent\n",
@@ -396,7 +248,7 @@
     "            X_test, y_test,learning_rate, stopping_threshold)\n",
     "        print(\n",
     "            f\"\\n\\nEstimated Intercept: {eatimated_bias}\\nEstimated coefficient: {estimated_weight}\\n Cost :{current_cost}\")\n",
-    "\n",
+    "        \n",
     "        # Making predictions using estimated parameters\n",
     "        Y_pred = estimated_weight*X_test + eatimated_bias\n",
     "\n",
@@ -407,12 +259,17 @@
     "                 markersize=10, linestyle='dashed')\n",
     "        plt.xlabel(\"Math\")\n",
     "        plt.ylabel(\"CS\")\n",
-    "        plt.show()\n"
+    "        plt.show()\n",
+    "        return {\n",
+    "            'intercept' : eatimated_bias,\n",
+    "            'coefficient':estimated_weight,\n",
+    "            'cost':current_cost\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "f76487fb",
    "metadata": {},
    "outputs": [
@@ -446,10 +303,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'intercept': 0.023435330359816067, 'coefficient': 1.044430540755398, 'cost': 15.90497930008593}\n"
+     ]
     }
    ],
    "source": [
-    "Model.predict( df.math, df.cs ,  1e-4 , 1e-6)"
+    "print(Model.predict( df.math, df.cs ,  1e-4 , 1e-6))"
    ]
   },
   {
@@ -463,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "ee408e42",
    "metadata": {
     "scrolled": true
@@ -487,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "c2792c61",
    "metadata": {},
    "outputs": [
@@ -539,17 +403,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "id": "631a3e5c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['final_model_.sav']"
+       "['final_model_joblib.sav']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "id": "577d9e2a",
    "metadata": {},
    "outputs": [
