--- a/3_dummy_variable/dummy_variable.ipynb
+++ b/3_dummy_variable/dummy_variable.ipynb
@@ -25,15 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "26f54cc4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import math"
+    "import numpy as np\n"
    ]
   },
   {
@@ -46,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "87da5c1c",
    "metadata": {},
    "outputs": [
@@ -126,7 +124,7 @@
        "4  BMW X5    46000    4  31500"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "0c157024",
    "metadata": {},
    "outputs": [],
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "80b81218",
    "metadata": {},
    "outputs": [],
@@ -169,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "0306a33e",
    "metadata": {},
    "outputs": [
@@ -230,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "211c2551",
    "metadata": {},
    "outputs": [
@@ -254,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "5d878f8c",
    "metadata": {},
    "outputs": [
@@ -288,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "id": "a880312f",
    "metadata": {},
    "outputs": [],
