--- a/0_elevation_task/3_dummy_variable/dummy_variable.ipynb
+++ b/0_elevation_task/3_dummy_variable/dummy_variable.ipynb
@@ -25,15 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "26f54cc4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import math"
+    "import numpy as np\n"
    ]
   },
   {
@@ -46,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "id": "87da5c1c",
    "metadata": {},
    "outputs": [
@@ -113,20 +111,84 @@
        "      <td>4</td>\n",
        "      <td>31500</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Audi A5</td>\n",
+       "      <td>59000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>29400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Audi A5</td>\n",
+       "      <td>52000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>32000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Audi A5</td>\n",
+       "      <td>72000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>19300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Audi A5</td>\n",
+       "      <td>91000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Mercedez Benz C class</td>\n",
+       "      <td>67000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>22000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Mercedez Benz C class</td>\n",
+       "      <td>83000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Mercedez Benz C class</td>\n",
+       "      <td>79000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>21000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Mercedez Benz C class</td>\n",
+       "      <td>59000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>33000</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    model  mileage  age  price\n",
-       "0  BMW X5    69000    6  18000\n",
-       "1  BMW X5    35000    3  34000\n",
-       "2  BMW X5    57000    5  26100\n",
-       "3  BMW X5    22500    2  40000\n",
-       "4  BMW X5    46000    4  31500"
+       "                    model  mileage  age  price\n",
+       "0                  BMW X5    69000    6  18000\n",
+       "1                  BMW X5    35000    3  34000\n",
+       "2                  BMW X5    57000    5  26100\n",
+       "3                  BMW X5    22500    2  40000\n",
+       "4                  BMW X5    46000    4  31500\n",
+       "5                 Audi A5    59000    5  29400\n",
+       "6                 Audi A5    52000    5  32000\n",
+       "7                 Audi A5    72000    6  19300\n",
+       "8                 Audi A5    91000    8  12000\n",
+       "9   Mercedez Benz C class    67000    6  22000\n",
+       "10  Mercedez Benz C class    83000    7  20000\n",
+       "11  Mercedez Benz C class    79000    7  21000\n",
+       "12  Mercedez Benz C class    59000    5  33000"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +196,7 @@
    "source": [
     "# df=pd.read_clipboard()\n",
     "df=pd.read_excel('./data.xlsx')\n",
-    "df.head()"
+    "df"
    ]
   },
   {
@@ -147,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "0c157024",
    "metadata": {},
    "outputs": [],
@@ -158,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "id": "80b81218",
    "metadata": {},
    "outputs": [],
@@ -169,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "0306a33e",
    "metadata": {},
    "outputs": [
@@ -230,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "211c2551",
    "metadata": {},
    "outputs": [
@@ -254,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "id": "5d878f8c",
    "metadata": {},
    "outputs": [
@@ -280,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1fcb5b6",
+   "id": "a83efbcc",
    "metadata": {},
    "source": [
     "### Write Csv file"
@@ -288,8 +350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "b254442d",
+   "execution_count": 18,
+   "id": "a880312f",
    "metadata": {},
    "outputs": [],
    "source": [
